# app/api_components/v1/schemas/queries/fleet_member_query.rb
@@ -13,6 +13,14 @@ module V1
             nameCont: {type: :string, deprecated: true, description: "Use usernameCont instead"},
             roleIn: {type: :array, items: {type: :string}},
             stateIn: {type: :array, items: {type: :string}},
+            acceptedAtGteq: {type: :string, format: :date},
+            acceptedAtLteq: {type: :string, format: :date},
+            invitedAtGteq: {type: :string, format: :date},
+            invitedAtLteq: {type: :string, format: :date},
+            requestedAtGteq: {type: :string, format: :date},
+            requestedAtLteq: {type: :string, format: :date},
+            declinedAtGteq: {type: :string, format: :date},
+            declinedAtLteq: {type: :string, format: :date},
             sorts: {anyOf: [{
               type: :array, items: {"$ref": "#/components/schemas/FleetMembershipSortEnum"}
             }, {
