# swagger/v1/schema.yaml
@@ -6051,8 +6051,10 @@ components:
       properties:
         limit:
           type: integer
+          nullable: true
         expiresAfterMinutes:
           type: integer
+          nullable: true
       additionalProperties: false
       title: FleetInviteUrlCreateInput
     FleetMemberCreateInput:
@@ -7650,6 +7652,30 @@ components:
           type: array
           items:
             type: string
+        acceptedAtGteq:
+          type: string
+          format: date
+        acceptedAtLteq:
+          type: string
+          format: date
+        invitedAtGteq:
+          type: string
+          format: date
+        invitedAtLteq:
+          type: string
+          format: date
+        requestedAtGteq:
+          type: string
+          format: date
+        requestedAtLteq:
+          type: string
+          format: date
+        declinedAtGteq:
+          type: string
+          format: date
+        declinedAtLteq:
+          type: string
+          format: date
         sorts:
           anyOf:
           - type: array
